test/fixtures/esprima/invalid-syntax/migrated_0048/actual.js
var source = '"\\u{110000}"';
